<resources>
    <string name="app_name">Minggu 4 ListRecyclerView</string>
    <string name="dashboard">Dashboard</string>
    <string name="oleh">Disusun Oleh:</string>
    <string name="nama">Defi Tamara - E41190942</string>
    <string name="prodi">TIF A Bondowoso</string>
    <string name="list_view">List View</string>
    <string name="recycler_view">Recycler View</string>

    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua dan Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
    </string-array>
</resources>