<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/logo_polije"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:text="@string/dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:textAllCaps="true"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_list_view"
        android:text="@string/list_view"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_recycler_view"
        android:text="@string/recycler_view"
        android:layout_width="180dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="100dp"
        android:text="@string/oleh"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/prodi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>